3D Flipper Style.css commit
3D Flipper Style.css commit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <title>Sample Grid Design</title>
-        <link rel="stylesheet" href="css/style_basic.css">
+        <!--<link rel="stylesheet" href="css/style_basic.css">-->
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
