--- a/index.html
+++ b/index.html
@@ -9,49 +9,49 @@
         <div class="container">
             <ul>                
                 <li>
-                    <div class="front">1</div>
+                    <div class="front"></div>
                     <div class="back">
                         <img src="images/leaf.jpg">
                     </div>                
                 </li>
                 <li>
-                    <div class="front">2</div>
+                    <div class="front"></div>
                     <div class="back">
                         <img src="images/leaf.jpg">
                     </div>                
                 </li>
                 <li>
-                    <div class="front">3</div>
+                    <div class="front"></div>
                     <div class="back">
                         <img src="images/leaf.jpg">
                     </div>                
                 </li>
                 <li>
-                    <div class="front">4</div>
+                    <div class="front"></div>
                     <div class="back">
                         <img src="images/leaf.jpg">
                     </div>                
                 </li>
                 <li>
-                    <div class="front">5</div>
+                    <div class="front"></div>
                     <div class="back">
                         <img src="images/leaf.jpg">
                     </div>                
                 </li>
                 <li>
-                    <div class="front">6</div>
+                    <div class="front"></div>
                     <div class="back">
                         <img src="images/leaf.jpg">
                     </div>                
                 </li>
                 <li>
-                    <div class="front">7</div>
+                    <div class="front"></div>
                     <div class="back">
                         <img src="images/leaf.jpg">
                     </div>                
                 </li>
                 <li>
-                    <div class="front">8</div>
+                    <div class="front"></div>
                     <div class="back">
                         <img src="images/leaf.jpg">
                     </div>                
