Changed the title.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Sample Grid Design</title>
+        <title>3D Flipper - CSS Flipping Animation</title>
         <!--<link rel="stylesheet" href="css/style_basic.css">-->
         <link rel="stylesheet" href="css/style.css">
     </head>
